# nn_model

./: README.md  pyproject.toml
conf/: simple_model.yaml
nn_model/: base.py  func.py  model.py  operations.py
nn_model/data/types/: __init__.py  collections.py  data.py
nn_model/modules/: __init__.py  allocation.py  cnn.py  misc.py  multi_input.py  rnn.py  single_input.py  transformer.py
notebooks/: tutorial.py
